--- a/movies.html
+++ b/movies.html
@@ -15,6 +15,16 @@
                 <a  href="insta.html">Instagram</a>
                 <a  href="personalblog.html">About</a>
                 <a  href="#Contact" >Contact</a>
+                <div class="dropdown" style="position: relative;top:-0.55cm;left:7.2cm">
+                    <button class="dropbtn">Favourites
+                      <i class="fa fa-caret-down"></i>
+                    </button>
+                    <div class="dropdown-content">
+                      <a href="music.html">Music</a>
+                      <a href="food.html">Food</a>
+                      <a href="movies.html">Movies</a>
+                   </div>
+                   </div>
             </div>
     
         </div>
