--- a/food.html
+++ b/food.html
@@ -13,8 +13,8 @@
             <div class="menu"> 
                 <a  href="personalblog.html">Home</a>
                 <a  href="insta.html">Instagram</a>
-                <a  href="personalblog.html">About</a>
-                <a  href="#Contact" >Contact</a>
+                <a  href="personalblog.html">Blog</a>
+                <a  href="blog.html" >Contact</a>
                 <div class="dropdown" style="position: relative;top:-0.55cm;left:7.2cm">
                     <button class="dropbtn">Favourites
                       <i class="fa fa-caret-down"></i>
@@ -126,7 +126,7 @@
                 </p>
                </div>
         </div>
-        <div id="Contact" style="background-color: black;height:8cm; position: relative; top:0cm" class="insta">
+        <div id="Contact" style="background-color: black;height:5cm; position: relative; top:0cm" class="insta">
             <div>
                 <a href="tel:076111111" style="color: white;font-size: 150%; position: relative; top:1.5cm;left:2cm">Contact: (+389 76 111 111)</a>
             </div>
