--- a/anketa.html
+++ b/anketa.html
@@ -12,7 +12,7 @@
         <div class="menu"> 
             <a  href="personalblog.html">Home</a>
             <a  href="insta.html">Instagram</a>
-            <a  href="personalblog.html">About</a>
+            <a  href="blog.html">Blog</a>
             <a  href="#Contact" >Contact</a>
             <div class="dropdown" style="position: relative;top:-0.55cm;left:7.2cm">
                 <button class="dropbtn">Favourites
@@ -29,25 +29,25 @@
    <section style="padding-left: 2%; padding-right: 2%;  margin-top: 2%;">
    <form method="post" action="personalblog.html" autocomplete="on" class="forma" >
    <section class="anketaprozor">
-    <p class="anketa">Your name:* <br>
+    <p class="anketa" style="background-color: white;">Your name:* <br>
         <input required type="text" name="name" placeholder="Name" autofocus autocomplete="anonymous" required>
     </p>
-    <p class="anketa">Your Last name:*<br>
+    <p class="anketa" style="background-color: white;">Your Last name:*<br>
         <input required type="text" name="name" placeholder="Last Name" autofocus autocomplete="anonymous" required>
     </p>
-    <p class="anketa">
+    <p class="anketa" style="background-color: white;">
         <label>Your comment:<br>
             <textarea rows="10" cols="30"  name="name" type="text" size="35" placeholder="Comment here:"></textarea>       </label>
 
     </p>
-    <p class="anketa">
+    <p class="anketa" style="background-color: white;">
         Things you liked:<br>
         Favourite items<input style="padding-left: 1cm; font-weight: normal;" type="checkbox" name="Things you liked">
         Blog<input style="padding-left: 1cm; font-weight: normal" type="checkbox" name="Things you liked">
         Instagram<input style="padding-left: 1cm; font-weight: normal" type="checkbox" name="Things you liked">
 
     </p>
-    <p class="anketa">
+    <p class="anketa" style="background-color: white;">
         How often do you visit this site?<br>
         <input type="text" name="posledno" list="posledno" placeholder="Posledno">
         <datalist id="posledno">
@@ -57,22 +57,22 @@
             <option value="It's my first time"></option>
         </datalist>
     </p>
-    <p class="anketa">
+    <p class="anketa" style="background-color: white;">
         Rate this site: <input type="number" max=10 min=1 step="=1">(1-10)
     </p>
-    <p class="anketa">
+    <p class="anketa" style="background-color: white;">
         Telephone number: <br> <input type="tel" pattern="\d{3} +\d{3} +\d{3}" placeholder="(###) ###-###">
     </p>
-    <p class="anketa">
+    <p class="anketa" style="background-color: white;">
         What did you like the most in the blog?<br>
         Fahion<input type="radio" name="blog" checked>
         Travel<input type="radio" name="blog">
         Sport<input type="radio" name="blog">
     </p>
-    <p class="anketa">Rate your favourite category in the blog: <br>0
+    <p class="anketa" style="background-color: white;">Rate your favourite category in the blog: <br>0
         <input name="blog" type="range" min="1" max="10" step="1" value=""> 10
     </p>
-    <p class="anketa">
+    <p class="anketa" style="background-color: white;">
         
             Date:<br>
             <input type="datetime-local" required>
@@ -87,7 +87,7 @@
 
    </section>
    </form> </section>
-   <div id="Contact" style="background-color: black;height:8cm; position: relative; top:1cm" class="insta">
+   <div id="Contact" style="background-color: black;height:5cm; position: relative; top:1cm" class="insta">
     <div>
         <a href="tel:076111111" style="color: white;font-size: 150%; position: relative; top:1.5cm;left:2cm">Contact: (+389 76 111 111)</a>
     </div>
