--- a/food.html
+++ b/food.html
@@ -13,21 +13,21 @@
             <div class="menu"> 
                 <a  href="personalblog.html">Home</a>
                 <a  href="insta.html">Instagram</a>
-                <a  href="personalblog.html">Blog</a>
-                <a  href="blog.html" >Contact</a>
-                <div class="dropdown" style="position: relative;top:-0.55cm;left:7.2cm">
-                    <button class="dropbtn">Favourites
-                      <i class="fa fa-caret-down"></i>
+                <a  href="blog.html">Blog</a>
+                <a  href="#Contact" >Contact</a>
+                <div class="dropdown" style="position: relative;top:-0.55cm;left:8.2cm">
+                    <button class="dropbtn">
+                        <a href="personalblog.html#favourite" style="font-size: large; border: none;">Favourites</a>
+                    
+                       <div class="dropdown-content">
+                         <a href="music.html">Music</a>
+                         <a href="food.html">Food</a>
+                         <a href="movies.html">Movies</a>
+                       </div>
                     </button>
-                    <div class="dropdown-content">
-                      <a href="music.html">Music</a>
-                      <a href="food.html">Food</a>
-                      <a href="movies.html">Movies</a>
-                   </div>
-                   </div>
+                </div>
             </div>
-    
-        </div>
+       </div>
         <ul class="horizontal">
             <li><a href=#m>Macedonian</a></li>
             <li><a href=#i>Italian</a></li>
