--- a/anketa.html
+++ b/anketa.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Anketa</title>
     <link rel="stylesheet" type="text/css" href="stylep.css">
+    <script src="javascript.js"></script>
 
 </head>
 <body style="font-size: large;">
@@ -26,6 +27,7 @@
                 </button>
             </div>
         </div>
+        <div id="clock" style="float: right; color: grey; font-weight: bolder;text-align: center; font-size: 120%;"></div>
 
     </div>
    <section style="padding-left: 2%; padding-right: 2%;  margin-top: 2%;">
