--- a/food.html
+++ b/food.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <title>Favourite movies</title>
         <link rel="stylesheet" type="text/css" href="stylep.css">
+        <script src="javascript.js"></script>
         
 
     </head>
@@ -27,6 +28,7 @@
                     </button>
                 </div>
             </div>
+            <div id="clock" style="float: right; color: grey; font-weight: bolder;text-align: center; font-size: 120%;"></div>
        </div>
         <ul class="horizontal">
             <li><a href=#m>Macedonian</a></li>
