--- a/music.html
+++ b/music.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>Favourite movies</title>
         <link rel="stylesheet" type="text/css" href="stylep.css">
-        
+        <script src="javascript.js"></script>
 
     </head>
     <body>
@@ -27,6 +27,7 @@
                     </button>
                 </div>
             </div>
+            <div id="clock" style="float: right; color: grey; font-weight: bolder;text-align: center; font-size: 120%;"></div>
        </div>
         
         <ul class="horizontal">
