--- a/music.html
+++ b/music.html
@@ -15,14 +15,16 @@
                 <a  href="insta.html">Instagram</a>
                 <a  href="blog.html">Blog</a>
                 <a  href="#Contact" >Contact</a>
-                <div class="dropdown" style="position: relative;top:-0.55cm;left:8.2cm">
+                <a href="anketa.html">Feedback</a>
+                <div class="dropdown" style="position: absolute;margin-left: 12cm;margin-top: 1.75%;">
                     <button class="dropbtn">
                         <a href="personalblog.html#favourite" style="font-size: large; border: none;">Favourites</a>
                     
                        <div class="dropdown-content">
-                         <a href="music.html">Music</a>
-                         <a href="food.html">Food</a>
-                         <a href="movies.html">Movies</a>
+                         <a href="music.html" style="border: none;">Music</a>
+                         <a href="food.html" style="border: none;">Food</a>
+                         <a href="movies.html" style="border: none;">Movies</a>
+
                        </div>
                     </button>
                 </div>
