--- a/food.html
+++ b/food.html
@@ -40,7 +40,7 @@
         <div>
             <p id="m" class="movies">Macedonian traditional food</p>
             <div class=blok>
-                <img src="pastr.jpg" alt="pastrmalija" class="slikite" >
+                <img src="./img/pastr.jpg" alt="pastrmalija" class="slikite" >
                 <p class="mftext" style="margin-left: 22cm;">
                     Pastrmalija
                 </p>
@@ -50,7 +50,7 @@
                 </p>
                </div>
                <div class=blok>
-                <img src="ajvar.jpg" alt="ajvar" class="slikite" >
+                <img src="./img/ajvar.jpg" alt="ajvar" class="slikite" >
                 <p class="mftext" style="margin-left: 22cm;">
                   Ajvar
                 </p>
@@ -61,7 +61,7 @@
                 </p>
                </div>
                <div class=blok>
-                <img src="mekici.jpg" alt="mekici" class="slikite" >
+                <img src="./img/mekici.jpg" alt="mekici" class="slikite" >
                 <p class="mftext" style="margin-left: 22cm;">
                   Mekici
                 </p>
@@ -76,7 +76,7 @@
         <div>
             <p id="i" class="movies">Italian cuisine</p>
             <div class=blok>
-                <img src="pizzapasta.jpg" alt="pasta" class="slikite" >
+                <img src="./img/pizzapasta.jpg" alt="pasta" class="slikite" >
                 <p class="mftext" style="margin-left: 22cm;">
                     Pasta & Pizza
                 </p>
@@ -89,7 +89,7 @@
                 </p>
                </div>
                <div class=blok>
-                <img src="tiramisu.jpeg" alt="tiramisu" class="slikite" >
+                <img src="./img/tiramisu.jpeg" alt="tiramisu" class="slikite" >
                 <p class="mftext" style="margin-left: 22cm;">
                   Tiramisù
                 </p>
@@ -104,7 +104,7 @@
         <div>
             <p id="t" class="movies">Turkish delicates</p>
             <div class=blok>
-                <img src="baklava.jpg" alt="baklava" class="slikite" >
+                <img src="./img/baklava.jpg" alt="baklava" class="slikite" >
                 <p class="mftext" style="margin-left: 22cm;">
                   Baklava
                 </p>
@@ -116,7 +116,7 @@
                 </p>
                </div>
                <div class=blok>
-                <img src="coffee.jpg" alt="coffee" class="slikite" >
+                <img src="./img/coffee.jpg" alt="coffee" class="slikite" >
                 <p class="mftext" style="margin-left: 22cm;">
                     Turkish coffee
                 </p>
@@ -135,8 +135,8 @@
                 <a href="tel:076111111" style="color: white;font-size: 150%; position: relative; top:1.5cm;left:2cm">Contact: (+389 76 111 111)</a>
             </div>
             <div>
-            <a style="float: right;" href="https://www.facebook.com/mihaela.blazeska.7" ><img class="contact" src="fb.jpg" alt="fb"></a>
-            <a style="float: right; margin-right: 1cm;" href="https://www.instagram.com/mihaelablazeska/?hl=en" ><img class="contact" src="insta.jpg" alt="fb"></a>
+            <a style="float: right;" href="https://www.facebook.com/mihaela.blazeska.7" ><img class="contact" src="./img/fb.jpg" alt="fb"></a>
+            <a style="float: right; margin-right: 1cm;" href="https://www.instagram.com/mihaelablazeska/?hl=en" ><img class="contact" src="./img/insta.jpg" alt="fb"></a>
             <p style="float: right; color:white ;padding:0.2cm;font-size: 150%; position: relative; text-align: right;">Social networks:</p>
             
             </div>
