--- a/music.html
+++ b/music.html
@@ -43,7 +43,7 @@
             </p>
             <div class=blok>
                 <a href="https://www.youtube.com/watch?v=q0hyYWKXF0Q">
-                <img src="dancemonkey.jpg" alt="dancemonkey" class="slikite" ></a>
+                <img src="./img/dancemonkey.jpg" alt="dancemonkey" class="slikite" ></a>
                 <audio controls>
                  <source src="TONES AND I - DANCE MONKEY (OFFICIAL VIDEO).mp3" type="audio/ogg">
                  </audio>
@@ -58,7 +58,7 @@
                 </p>
             </div>
             <div class=blok>
-                <a href="https://www.youtube.com/watch?v=k2qgadSvNyU&list=PLh5VL90ozB-QAr2q-NyD70rZe7BPoADzj"><img src="newrules.jpg" alt="newrules" class="slikite" ></a>
+                <a href="https://www.youtube.com/watch?v=k2qgadSvNyU&list=PLh5VL90ozB-QAr2q-NyD70rZe7BPoADzj"><img src="./img/newrules.jpg" alt="newrules" class="slikite" ></a>
                 <audio controls>
                     <source src="Dua Lipa - New Rules (Official Music Video).mp3" type="audio/ogg">
                 </audio>
@@ -75,7 +75,7 @@
         <div>
             <p id="8" class="movies">80s Music</p>
             <div class=blok>
-               <a href="https://www.youtube.com/watch?v=eH3giaIzONA"><img src="dancewithsmb.jpg" alt="dancewithsmb" class="slikite"> </a> >
+               <a href="https://www.youtube.com/watch?v=eH3giaIzONA"><img src="./img/dancewithsmb.jpg" alt="dancewithsmb" class="slikite"> </a> >
                <audio controls>
                 <source src="Whitney Houston - I Wanna Dance With Somebody (Official Video).mp3" type="audio/ogg">
                </audio>
@@ -92,7 +92,7 @@
         <div>
             <p id="9"class="movies">90s Music</p>
             <div class=blok>
-                <a href="https://www.youtube.com/watch?v=p47fEXGabaY"><img src="lavida.jpg" alt="lavida" class="slikite" ></a>
+                <a href="https://www.youtube.com/watch?v=p47fEXGabaY"><img src="./img/lavida.jpg" alt="lavida" class="slikite" ></a>
                 <audio controls>
                     <source src="Ricky Martin - Livin' La Vida Loca (Official Music Video).mp3" type="audio/ogg">
                    </audio>
@@ -112,8 +112,8 @@
                 <a href="tel:076111111" style="color: white;font-size: 150%; position: relative; top:1.5cm;left:2cm">Contact: (+389 76 111 111)</a>
             </div>
             <div>
-            <a style="float: right;" href="https://www.facebook.com/mihaela.blazeska.7" ><img class="contact" src="fb.jpg" alt="fb"></a>
-            <a style="float: right; margin-right: 1cm;" href="https://www.instagram.com/mihaelablazeska/?hl=en" ><img class="contact" src="insta.jpg" alt="fb"></a>
+            <a style="float: right;" href="https://www.facebook.com/mihaela.blazeska.7" ><img class="contact" src="./img/fb.jpg" alt="fb"></a>
+            <a style="float: right; margin-right: 1cm;" href="https://www.instagram.com/mihaelablazeska/?hl=en" ><img class="contact" src="./img/insta.jpg" alt="fb"></a>
             <p style="float: right; color:white ;padding:0.2cm;font-size: 150%; position: relative; text-align: right;">Social networks:</p>
             
             </div>
