--- a/anketa.html
+++ b/anketa.html
@@ -7,7 +7,9 @@
     <script src="javascript.js"></script>
 
 </head>
+
 <body style="font-size: large;">
+    <!--Navigacisko meni-->
     <div class="home">
         <h1 class="try">Mihaela's Journey</h1>
         <div class="menu"> 
@@ -33,6 +35,7 @@
 
     </div>
     <div id="tuka"></div>
+    <!--Anketa-->
     <section  style="padding-left: 2%; padding-right: 2%;  margin-top: 2%;">
      <div autocomplete="on" class="forma" >
        <section class="anketaprozor" >
@@ -94,7 +97,7 @@
     </div>     
      </section>
     
-
+    <!--Kontakt-->
    <div id="Contact" style="background-color: black;height:5cm;" class="insta">
         <div>
             <a href="tel:076111111" style="color: white;font-size: 150%; position: relative; top:1.5cm;left:2cm">Contact: (+389 76 111 111)</a>
